# musr2py

./: .travis.yml  CMakeLists.txt  MuSR_td_PSI_bin.cpp  MuSR_td_PSI_bin.h  README.md  parse.py  pybind.cpp  pybind.tmpl  pyproject.toml  setup.py
.github/workflows/: wheels.yml
example/: read_info.py
